--- a/crystalgate/data/loading/index.html
+++ b/crystalgate/data/loading/index.html
@@ -3,7 +3,7 @@
     <head>
 
     </head>
-    <body style="margin: 0px; overflow: hidden;">
+    <body style="margin: 0px; overflow: hidden; background-color: black;">
         <video src="LoadingScreenBlack_3.webm" autoplay muted style="width: 100%;">
     </body>
 </html>
