--- a/crystalgate/data/loading/index.html
+++ b/crystalgate/data/loading/index.html
@@ -4,6 +4,6 @@
 
     </head>
     <body style="margin: 0px; overflow: hidden; background-color: black;">
-        <video src="LoadingScreenBlack_3.webm" autoplay muted style="width: 100%;">
+        <video src="LoadingScreenBlack_3.webm" autoplay muted loop style="width: 100%;">
     </body>
 </html>
