--- a/crystalgate/cinema/index.html
+++ b/crystalgate/cinema/index.html
@@ -31,9 +31,10 @@
 		<div class="info-container">
 
 			<!-- Flash Detection -->
-			<div id="noflash" class="info warning"></div>
+			<!--<div id="noflash" class="info warning"></div>-->
 
-			<div class="info">To request a video, open the queue by holding down Q and press the 'Request Video' button</div>
+			<div class="info" lang="en">To request a video, open the queue by holding down Q and press the 'Request Video' button</div>
+			<div class="info" lang="ru">Чтобы поставить видео, откройте очередь, удерживая Q, и нажмите кнопку «Поставить видео».</div>
 
 		</div>
 
