--- a/crystalgate/cinema/index.html
+++ b/crystalgate/cinema/index.html
@@ -32,7 +32,6 @@
 
 			<!-- Flash Detection -->
 			<!--<div id="noflash" class="info warning"></div>-->
-
 			<div class="info" lang="ru">Чтобы поставить видео, откройте очередь, удерживая Q, и нажмите кнопку «Поставить видео»</div>
 			<div class="info" lang="en">To request a video, open the queue by holding down Q and press the 'Request Video' button</div>
 
@@ -50,6 +49,7 @@
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 
 	<script src="https://f.vimeocdn.com/js/froogaloop2.min.js" type="text/javascript"></script>
+	<script src="https://vk.com/js/api/videoplayer.js" type="text/javascript"></script>
 	<!--
 	<script type="text/javascript">
 	var elem = document.getElementById("noflash");
