--- a/crystalgate/cinema/search/search.html
+++ b/crystalgate/cinema/search/search.html
@@ -53,12 +53,12 @@
 	<script type="text/javascript">
 	// Event called when a service is hovered
 	function hoverService() {
-		if(game) game.PlaySound('garrysmod/ui_hover.wav');
+		if(typeof game !== 'undefined') game.PlaySound('garrysmod/ui_hover.wav');
 	}
 
 	// Event called when a service is selected
 	function selectService(name, url) {
-		if(game) game.PlaySound('garrysmod/ui_click.wav');
+		if(typeof game !== 'undefined') game.PlaySound('garrysmod/ui_click.wav');
 
 		//ga('send', 'event', 'services', 'visit', name);
 		setTimeout(function(){
