--- a/crystalgate/cinema/index.html
+++ b/crystalgate/cinema/index.html
@@ -4,6 +4,7 @@
 	<title>Cinema Default Page</title>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/swfobject/2.2/swfobject.js" type="text/javascript"></script>
 	<script src="https://www.youtube.com/iframe_api" type="text/javascript"></script>
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
 	<script src="js/theater.js" type="text/javascript"></script>
 </head>
 <body>
